# solargraph

./: .gitignore  Pipfile  README.md  deploy.sh  requirements.txt  schema.sql  solargraph-api.service  solargraph-dash.py  solargraph-sl.py  solargraph.service
assets/: solargraph.css
solargraph/: .env.example  next.config.ts  package-lock.json  package.json
solargraph/app/: globals.css  layout.tsx  page.tsx
solargraph/app/components/: CurrentSolarStatus.tsx  CurrentSolarStatusClient.tsx  DateSelector.tsx  DerivedSolarPlot.tsx  NavMenu.tsx  SolarBarPlot.tsx  SolarPlot.tsx
solargraph/app/daily/: page.tsx
solargraph/app/lib/: api.ts
solargraph/app/monthly/: page.tsx
solargraph/app/samples/: page.tsx
solargraph/app/styles/: Navbar.module.css
solargraph_api/: Cargo.toml
solargraph_api/src/: main.rs
solarweb_api/: Cargo.toml  run.sh
solarweb_api/src/: db.rs  main.rs
